Bug 503156 - Scheduled Transactions: "Process this schedule always at the last day of the month" makes whole dialog grey-out
Summary: Scheduled Transactions: "Process this schedule always at the last day of the ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-22 08:26 UTC by Paul Worrall
Modified: 2025-04-22 09:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2025-04-22 08:26:24 UTC
STEPS TO REPRODUCE
With kmymoney-master-4128-linux-gcc-x86_64.AppImage (up to the current 4271) :
1. Select "New schedule"
2. Select "Process this schedule always at the last day of the month"

OBSERVED RESULT
The whole dialog box greys out making it impossible to proceed.

SOFTWARE/OS VERSIONS
KMM: kmymoney-master-4271-linux-gcc-x86_64.AppImage
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Graphics Processor: AMD CEDAR
Comment 1 Thomas Baumgart 2025-04-22 09:52:28 UTC
Git commit 56de6f38574f3c374ce343fcbb9f7755fbf6bb70 by Thomas Baumgart.
Committed on 22/04/2025 at 09:52.
Pushed by tbaumgart into branch 'master'.

Fix disabling the whole schedule dialog
FIXED-IN: 5.2

M  +3    -1    kmymoney/views/keditscheduledlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/56de6f38574f3c374ce343fcbb9f7755fbf6bb70