Fix disabling the whole schedule dialog

BUG: 503156
FIXED-IN: 5.2