kmymoney/views/keditscheduledlg.cpp
@@ -448,7 +448,9 @@ KEditScheduleDlg::KEditScheduleDlg(const MyMoneySchedule& schedule, QWidget* par
     const auto dateEdit = d->transactionEditor->findChild<QWidget*>("dateEdit");
     if (dateEdit) {
         connect(d->ui->lastDayInMonthOption, &QCheckBox::stateChanged, dateEdit, [&](int state) {
-            setDisabled(state == Qt::Checked);
+            Q_D(KEditScheduleDlg);
+            const auto dateEdit = d->transactionEditor->findChild<QWidget*>("dateEdit");
+            dateEdit->setDisabled(state == Qt::Checked);
         });
         dateEdit->setDisabled(d->ui->lastDayInMonthOption->isChecked());
     }
